--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class="selection">
+        <button id="rock"></button>
+        <button id="paper"></button>
+        <button id="scissors"></button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
