Functional event listener for selection

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <button id="paper"></button>
         <button id="scissors"></button>
     </div>
+    <p>Result:</p>
+    <p id="result"></p>
     <script src="script.js"></script>
 </body>
 </html>
