--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Rock Paper Scissors</h1>
+    <p>Game info: Rock paper scissors is often used as a fair choosing method between two people, similar to coin flipping, drawing straws, or throwing dice in order to settle a dispute or make an unbiased group decision.<sup>[<a href="https://en.wikipedia.org/wiki/Rock_paper_scissors">1</a>]</sup></p>
     <div class="selection">
         <button id="rock"></button>
         <button id="paper"></button>
         <button id="scissors"></button>
     </div>
-    <p>Result:</p>
-    <p id="result"></p>
+    <div class="result">
+        <h2>Result:</h2>
+        <p id="result"></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
