--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <button id="scissors"></button>
     </div>
     <div class="result">
+        <h2>Human Score:</h2>
+        <p id="human"></p>
+        <h2>Computer Score:</h2>
+        <p id="computer"></p>
         <h2>Result:</h2>
         <p id="result"></p>
     </div>
