--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </div>
     <div class="result">
         <h2>Human Score:</h2>
-        <p id="human"></p>
+            <p id="humanScore"></p>
         <h2>Computer Score:</h2>
-        <p id="computer"></p>
+            <p id="computerScore"></p>
         <h2>Result:</h2>
-        <p id="result"></p>
+            <p id="result"></p>
     </div>
     <script src="script.js"></script>
 </body>
