Add final result of winner

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <button id="scissors"></button>
     </div>
     <div class="result">
-        <h2>Human Score:</h2>
-            <p id="humanScore"></p>
+        <h2>Your Score:</h2>
+            <p id="userScore"></p>
         <h2>Computer Score:</h2>
             <p id="computerScore"></p>
         <h2>Result:</h2>
