--- a/index.html
+++ b/index.html
@@ -6,21 +6,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
-    <p>Game info: Rock paper scissors is often used as a fair choosing method between two people, similar to coin flipping, drawing straws, or throwing dice in order to settle a dispute or make an unbiased group decision.<sup>[<a href="https://en.wikipedia.org/wiki/Rock_paper_scissors">1</a>]</sup></p>
-    <div class="selection">
-        <button id="rock"></button>
-        <button id="paper"></button>
-        <button id="scissors"></button>
-    </div>
-    <div class="result">
-        <h2>Your Score:</h2>
-            <p id="userScore"></p>
-        <h2>Computer Score:</h2>
-            <p id="computerScore"></p>
-        <h2>Result:</h2>
-            <p id="result"></p>
-    </div>
+    <div class="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
